--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,7 +19,7 @@ body {
 .apparel {
     display: flex;
     width: 100%;
-    height: 800px;
+    min-height: 800px;
     &__left-side {
         max-width: 830px;
         width: 100%;
@@ -30,6 +30,13 @@ body {
         width: 445px;
         margin-top: 65px;
         margin-left: 165px;
+    }
+    &__woman-mobile {
+        display: none;
+        max-width: 610px;
+        width: 100%;
+        height: 400px;
+        background: url('../img/hero-desktop.jpg');
     }
     &__big-text {
         text-transform: uppercase;
@@ -53,13 +60,15 @@ body {
         width: 100%;
         max-width: 610px;
         background-image: url('../img/hero-desktop.jpg');
+        background-size: cover;
     }
     &__input-wrap {
         position: relative;
         margin-top: 50px;
     }
     &__input {
-        width: 445px;
+        max-width: 445px;
+        width: 100%;
         height: 55px;
         padding: 0 35px;
         border-radius: 30px;
@@ -104,3 +113,5 @@ body {
         }
     }
 }
+
+@import 'media'
